src/objects/Participant_Contact__c.object
<CustomObject>
    <fields>
        <fullName>Contact_Office__c</fullName>
        <label>Contact Office</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CRM Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Participant_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Language</label>
        <referenceTo>Language__c</referenceTo>
        <relationshipLabel>Application Contacts</relationshipLabel>
        <relationshipName>Application_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participant__c</fullName>
        <label>Application</label>
        <referenceTo>Participation__c</referenceTo>
        <relationshipLabel>Application Contacts</relationshipLabel>
        <relationshipName>Participant_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corporate Officer</fullName>
                </value>
                <value>
                    <fullName>Portal Administrator</fullName>
                </value>
                <value>
                    <fullName>Organization Contact</fullName>
                </value>
                <value>
                    <fullName>Primary Contact</fullName>
                </value>
                <value>
                    <fullName>Organization Corporate Officer</fullName>
                </value>
                <value>
                    <fullName>International Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <inlineHelpText>Job Title for Participant Contact</inlineHelpText>
        <label>Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Application Contact</label>
    <nameField>
        <displayFormat>PC-{0000}</displayFormat>
        <label>Application Contact</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Contacts</pluralLabel>
    <recordTypes>
        <fullName>Privacy_Shield_Application_Contact</fullName>
        <active>true</active>
        <description>For use with Application Contacts on the Privacy Shield Application.</description>
        <label>Privacy Shield Application Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Regional_Toolkit_Application_Contact</fullName>
        <active>true</active>
        <description>For use with Application Contacts on Toolkit Applications that require Primary and Regional Roles.</description>
        <label>Regional Toolkit Application Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Toolkit_Application_Contact</fullName>
        <active>true</active>
        <description>For use with Application Contacts on Toolkit Applications.</description>
        <label>Toolkit Application Contact</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>